--- a/article.html
+++ b/article.html
@@ -125,8 +125,8 @@
         <section class="o-section">
 
             <!-- Section Title -->
-            <div class="view">
-                <img src="dist/img/imagenes/c4.jpg" class="o-section__img d-block w-100 position-fixed" alt="">
+            <div class="view o-section-view">
+                <img src="dist/img/imagenes/c4.jpg" class="position-fixed o-section__img o-section__img--article" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Article</h1>
