--- a/blog.html
+++ b/blog.html
@@ -123,8 +123,8 @@
         <section class="o-section">
 
             <!-- Section Title -->
-            <div class="view">
-                <img src="dist/img/imagenes/blog.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+            <div class="view o-section-view">
+                <img src="dist/img/imagenes/blog.jpeg" class="o-section__img position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Blog</h1>
