--- a/servicios.html
+++ b/servicios.html
@@ -126,8 +126,8 @@
         <section class="o-section">
 
             <!-- Section Title -->
-            <div class="view">
-                <img src="dist/img/imagenes/welcome.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+            <div class="view o-section-view">
+                <img src="dist/img/imagenes/welcome.jpeg" class="o-section__img o-section__img--services position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Servicios</h1>
