--- a/contacto.html
+++ b/contacto.html
@@ -126,14 +126,14 @@
         <section class="o-section contact">
 
             <!-- Section Title -->
-            <div class="view">
-                <img src="dist/img/imagenes/contacto.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+            <div class="view o-section-view">
+                <img src="dist/img/imagenes/contacto.jpeg" class="o-section__img o-section__img--contact position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Contacto</h1>
                         <hr class="o-section__hr o-section__hr--center">
                     </div>
-                </div>
+                </div>  
             </div>
             <!-- ./Section Title -->
 
