--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -128,8 +128,8 @@
         <section class="o-section">
 
             <!-- Section Title -->
-            <div class="view">
-                <img src="dist/img/imagenes/edificio.jpeg" class="o-section__img d-block w-100 position-fixed" alt="">
+            <div class="view o-section-view">
+                <img src="dist/img/imagenes/edificio.jpeg" class="o-section__img position-fixed" alt="">
                 <div class="o-section__title">
                     <div class="mask rgba-blue-light flex-center flex-column">
                         <h1 class="o-section__h1">Nosotros</h1>
